Allow incorrectly-cased URLs to be redirected to the correct page

--- a/.htaccess
+++ b/.htaccess
@@ -7,5 +7,5 @@ Options +FollowSymLinks -MultiViews
 RewriteEngine On
 RewriteBase /
 
-RewriteCond /var/www/html/pages%{REQUEST_URI}.php -f
-RewriteRule !.*\.php$ /var/www/html/pages%{REQUEST_URI}.php [QSA,L]
+RewriteCond /var/www/html/pages/${tolower:%{REQUEST_URI}}.php -f
+RewriteRule !.*\.php$ /var/www/html/pages/${tolower:%{REQUEST_URI}}.php [QSA,L]
